# sdr-widget

./: .cproject  .framework  .gitignore  .project  AUTHORS  AW_readme.txt  ChangeLog  HW_GEN_DIN20-further-work.txt  Makefile  Makefile-AMB  Makefile.am  README  WidgetControl.py  WidgetControl.rsrc.py  cleanup.sh  configure.ac  ghpsdr3-alex.pro  make-sdr-widget  make-widget  make-widget-win  make-widget-win7  makefile.defs  program_widget  sdr-widget.componentinfo.xml  sdr-widget.cproj  watch-card0.sh  watch-card1.sh  watch-card2.sh  watch-card3.sh  widget-control.c  widgettest01.py
Notes/: programming-the-firmware.txt  using-sdr-widget-at-github.txt
Release/: makefile  objects.mk  sdr_widget.elf  sources.mk
Release/src/: subdir.mk
SDRMoboControl/: MoboControl03.pyw  MoboControl03.rsrc.py  widgettest01.py
WidgetControl_exe/: aw_noptest.ini  aw_ptest.ini  aw_uac1.ini  aw_uac2.ini  test.ini
branches/android/JMonitor/: .project  AndroidManifest.xml
branches/iPhone/HPSDR/: FlipsideView.xib  HPSDR-Info.plist  HPSDR_Prefix.pch  MainView.xib  MainWindow.xib  audiostream.c  audiostream.h  band.h  connection.c  connection.h  files  main.m  samples.c  samples.h
branches/java/jmonitor/: build.xml  master-applet.jnlp  master-application.jnlp  preview-applet.html  preview-application.html
branches/java/www/: index.html  jmonitor.html  jmonitor.jnlp  jmonitorapplet.html  jmonitorapplet.jnlp  rx0-1.html  rx0.html  rx1.html  rx2.html  rx3.html
branches/qt/qtMonitor/: audio.cpp  audio.h  qtMonitor.cpp  qtMonitor.h  qtMonitor.ui  spectrum.h  waterfall.cpp  waterfall.h
branches/qt/qtMonitor-knobs/: audio.cpp  main.cpp  moc_audio.cpp  moc_qtMonitor.cpp  moc_spectrum.cpp  moc_waterfall.cpp  qtMonitor.cpp  qtMonitor.h  qtMonitor.ui  spectrum.cpp  ui_qtMonitor.h
branches/testgraph/: mainwindow.cpp  mainwindow.ui  testgraph.pro
branches/testserver/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  test-server.pro
demo_UAC1/: widgettest01.py
demo_UAC1/src/: AD7991.c  Adobe Reader 9.lnk  DG8SAQ_cmd.c  DG8SAQ_cmd.h  I2C.h  LCD_bargraphs.c  composite_widget.h  taskAK5394A.c  taskAK5394A.h
demo_UAC1/src/CONFIG/: Copy of FreeRTOSConfig.h  FreeRTOSConfig.h  conf_usb.h
etc/: program-widget  sdr-widget.rules
src/: AD5301.c  AD5301.h  AD7991.c  AD7991.h  BlinkyFlashy.c  DG8SAQ_cmd.c  DG8SAQ_cmd.h  I2C.c  I2C.h  LCD_bargraphs.h  Mobo_config.c  Mobo_config.h  PCF8574.c  PCF8574.h  Si570.c  Si570.h  TMP100.c  TMP100.h  Xhpsdr_device_audio_task.c  Xhpsdr_image.c  Xhpsdr_taskAK5394A.c  Xhpsdr_usb_descriptors.h  composite_widget.c  composite_widget.h  device_audio_task.c  device_audio_task.h  device_mouse_hid_task.c  device_mouse_hid_task.c_legacy_commands  device_mouse_hid_task.h  features.c  features.h  flashyBlinky.c  flashyBlinky.h  flashyblinky_image.c  freq_and_filters.c  freq_and_filters.h  host_audio_task.c  host_audio_task.h  hpsdr_device_audio_task.c  hpsdr_device_audio_task.h  (+63 more)
src/CONFIG/: FreeRTOSConfig.h  conf_usb.h
src/SOFTWARE_FRAMEWORK/ASM/: trampoline.x
src/SOFTWARE_FRAMEWORK/BOARDS/: board.h
src/SOFTWARE_FRAMEWORK/UTILS/: compiler.h  conf_isp.h
src/archive_uac1/: uac1_device_audio_task.c  uac1_image.c  uac1_taskAK5394A.c  uac1_usb_descriptors.c  uac1_usb_specific_request.c
trunk/doc/: info.odt  protocols.odt
trunk/src/: .gitignore  README  SpectrumGL.cpp  SpectrumGL.h
trunk/src/DttSP/: AUTHORS  Makefile  Makefile.am  Makefile.am.orig  Makefile.in  am_demod.c  am_demod.h  banal.c  bufvec.c  common.h  correctIQ.c  correctIQ.h  cwtones.c  cwtones.h  cxops.c  cxops.h  dcblock.c  dcblock.h  defs.h  diversity.h  dttspagc.c  fastrig.c  fastrig.h  fftw.h  fftw3.h  fftw3_fix.h  files  filter.c  filter.h  filterbank.c  filterbank.h  fm_demod.c  fm_demod.h  graphiceq.c  graphiceq.h  hilbert.c  hilbert.h  iosdr.h  isoband.c  isoband.h  (+42 more)
trunk/src/HPSDRProgrammer/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Discovery.cpp  Discovery.h  HPSDRProgrammer.pro  Interfaces.cpp  Interfaces.h  Metis.cpp  Metis.h  RawReceiveThread.cpp  RawReceiveThread.h  ReceiveThread.cpp  ReceiveThread.h  Version.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/src/HPSDRServer/: HPSDRServer.pro  audio.cpp  audio.h  client.cpp  client.h  clientserver.cpp  clientserver.h  discovery.cpp  (+16 more)
trunk/src/QtRadio/: AMFilters.cpp  AMFilters.h  About.cpp  About.h  About.ui  Audio.cpp  Audio.h  Band.cpp  Band.h  BandLimit.cpp  BandLimit.h  BandStackEntry.cpp  BandStackEntry.h  Bandscope.cpp  Bandscope.h  Bandscope.ui  Bookmark.cpp  Bookmark.h  Bookmark.ui  BookmarkDialog.cpp  BookmarkDialog.h  Bookmarks.cpp  Bookmarks.h  BookmarksDialog.cpp  BookmarksDialog.h  BookmarksDialog.ui  BookmarksEditDialog.cpp  BookmarksEditDialog.h  BookmarksEditDialog.ui  Buffer.cpp  Buffer.h  CWLFilters.cpp  CWLFilters.h  CWUFilters.cpp  CWUFilters.h  Configure.cpp  Configure.h  Configure.ui  Connection.cpp  Connection.h  (+65 more)
trunk/src/QtRadio/build-aux/: autotroll.m4  autotroll.mk
trunk/src/dspserver/: Makefile  Makefile.am  Makefile.mac  Makefile.orig  README  audiostream.c  audiostream.h  banal.h  buffer.h  bufvec.h  client.c  client.h  codec2.h  codec2loc.h  complex.h  datatypes.h  defs.h  dttsp.h  dttspagc.h  fromsys.h  main.c  main.h  ozy.c  ozy.h  soundcard.c  soundcard.h  splitfields.h  version.h
trunk/src/perseus/: Makefile.am  README  bandscope.cpp  bandscope.h  client.cpp  client.h  configure.ac  listener.cpp  messages.h  parse.cpp  perseus_audio.cpp  perseus_audio.h  receiver.cpp  receiver.h  server.cpp  util.h
trunk/src/softrock/: Makefile  Makefile.am  README  client.c  client.h  config_ops.c  jackio.c  jackio.h  listener.c  listener.h  operations.c  receiver.c  receiver.h  server.c  softrock.c  softrock.h  softrockio.c  softrockio.h
trunk/src/widget-server/: Makefile  Makefile.am  Makefile.in  OzyInit.c  client.c  getopt.c  getopt.h  getopt_long.c  listener.c  messages.h  metis.c  operations.c  ozy.c  ozy.h  ozyio.c  receiver.c  receiver.h  server.c  server.c.orig  server.dsp  server.vcproj  transmitter.c  transmitter.h
trunk/src/widget-server/windows/: usb.h
(+485 files in other folders)
