bin_PROGRAMS				    = perseus_server
perseus_server_CPPFLAGS	= -g -O3 -Wall

perseus_server_SOURCES = \
                     	bandscope.cpp  \
                  		listener.cpp \
                  		receiver.cpp \
                   		util.cpp \
                  		client.cpp \
                   		perseus_audio.cpp \
                  		server.cpp \
                    	bandscope.h  client.h  listener.h  messages.h  perseus_audio.h  receiver.h  util.h

		
