bin_PROGRAMS = widget-server

widget_server_CFLAGS = -O3 -std=gnu99
widget_server_LDFLAGS = -lusb-1.0

widget_server_SOURCES = \
    bandscope.c  \
		listener.c \
		receiver.c \
		transmitter.c \
		util.c \
		client.c \
		ozy.c \
		ozyio.c \
		metis.c \
		server.c \
		operations.c \
		config_ops.c \
bandscope.h  buffer.h  client.h  config_ops.h  getopt.h  hpsdr_usb.h  listener.h  messages.h  metis.h  operations.h  ozy.h  ozyio.h  pthread.h  receiver.h  sched.h  semaphore.h  transmitter.h  usb.h  util.h

